# apps.connectivity.bluetooth

./: CMakeLists.txt  org.tizen.bluetooth.efl  org.tizen.bluetooth.manifest  org.tizen.bluetooth.rule  org.tizen.bluetooth.xml
edc/: bluetooth.edc  bt-connection.edc
include/: bt-dbus-method.h  bt-handler.h  bt-main-view.h  bt-main.h  bt-popup.h  bt-profile-view.h  bt-string.h  bt-type-define.h  bt-util.h
packaging/: org.tizen.bluetooth.spec
po/: CMakeLists.txt  ar.po  as.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  km.po  kn.po  ko_KR.po  ky_KG.po  (+39 more)
src/: bt-dbus-method.c  bt-handler.c  bt-main-view.c  bt-main.c  bt-popup.c  bt-profile-view.c  bt-util.c
tables/: org.tizen.bluetooth_ChangeableColorTable.xml
